--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -1,3 +1,4 @@
+;suppress inspection "DuplicateKeyInSection" for whole file
 [custom]
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
 ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
@@ -12,10 +13,10 @@ ruleset=Ⓜ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/maste
 ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt
+ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-
+[proxy_groups]
 custom_proxy_group=🤖 OpenAI`select`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
 custom_proxy_group=🎵 TikTok`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
 custom_proxy_group=🎥 Netflix`select`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
@@ -32,7 +33,6 @@ custom_proxy_group=🇰🇷 韩国节点`load-balance`round-robin`(^(?!.*x(?:[2-
 custom_proxy_group=Ⓜ 微软服务`select`[]DIRECT`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-
 
 enable_rule_generator=true
 overwrite_original_rules=true
