--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -1,4 +1,3 @@
-;suppress inspection "DuplicateKeyInSection" for whole file
 [custom]
 ;不要随意改变关键字，否则会导致出错
 ;acl4SSR规则
@@ -11,58 +10,68 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Epic/Epic.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Sony/Sony.list
-ruleset=🎮 游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Steam/Steam.list
-ruleset=🤖 OpenAI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
-ruleset=🎵 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
-ruleset=🔍 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/google/google.list
-ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/youtube/youtube.list
-ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
-ruleset=Ⓜ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=Ⓜ 微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=REJECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt
-ruleset=🎯 全球直连,[]GEOIP,CN
-ruleset=🐟 漏网之鱼,[]FINAL
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
+ruleset=微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
+ruleset=微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
+ruleset=苹果服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
+ruleset=电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
+ruleset=AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
+ruleset=AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
+ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
+ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+ruleset=youtobe,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
+ruleset=国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
+ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
+ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
+;ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+;ruleset=DIRECT,[]GEOIP,LAN
+ruleset=DIRECT,[]GEOIP,CN
+ruleset=漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=节点选择`select`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
-custom_proxy_group=🤖 OpenAI`select`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
-custom_proxy_group=🎥 Netflix`select`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点
-custom_proxy_group=🔍 Google`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
-custom_proxy_group=🎮 游戏平台`select`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
-custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
-custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇭🇰 香港节点`load-balance`round-robin`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:港|香港|HongKong|HK|Hong Kong)).*$)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=🇯🇵 日本节点`load-balance`round-robin`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇺🇲 美国节点`load-balance`round-robin`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:美|美国|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|(?<![a-zA-Z])US(?![a-zA-Z])|(?<![a-zA-Z])USA(?![a-zA-Z])|(?<![a-zA-Z])USD(?![a-zA-Z]))).*$)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇨🇳 台湾节点`load-balance`round-robin`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:台|新北|彰化|TW|Taiwan)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇸🇬 狮城节点`load-balance`round-robin`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:新加坡|坡|狮城|SG|Singapore)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=🇰🇷 韩国节点`load-balance`round-robin`(^(?!.*x(?:[2-9]|[1-9][0-9]))(?=.*(?:KR|Korea|KOR|首尔|韩|韓)).*$)`http://www.gstatic.com/generate_204`300,100
-custom_proxy_group=Ⓜ 微软服务`select`[]DIRECT`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点
-custom_proxy_group=🎯 全球直连`select`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]DIRECT
+custom_proxy_group=节点选择`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=手动切换`select`.*
+custom_proxy_group=最低延迟`url-test`[]香港`[]新加坡`[]日本`http://www.gstatic.com/generate_204`300
+custom_proxy_group=电报消息`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=AI`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=youtobe`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=奈飞视频`select`[]netflix`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=巴哈姆特`select`[]台湾`[]节点选择`[]手动切换`[]DIRECT
+custom_proxy_group=国外媒体`select`[]节点选择`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]手动切换
+custom_proxy_group=谷歌FCM`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=微软Bing`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=微软云盘`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=微软服务`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=苹果服务`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=游戏平台`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=漏网之鱼`select`[]节点选择`[]最低延迟`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换
+custom_proxy_group=香港`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=日本`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=美国`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=新加坡`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=韩国`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=netflix`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
 
 enable_rule_generator=true
 overwrite_original_rules=true
-skip_failed_links=true
 
-exclude_remarks=(IPV6|重置|流量|用户|本站|漏洞|永久虚通路|车|邀|免翻|邀请|eevpn|域名|网址|机场|刷新|到期|套餐|官网|更多|禁止|备用登录|计划|面板|忘记|超时|关注|25倍率|http|增加|持续|渠道|购买|QQ|Ins|二手|.*([3-9]\.[0-9]x)|([1-9][0-9]x)|([3-9]x))
-
-rename=!!GROUP=milkcat!!^@MilkCat-
-rename=!!GROUP=eejsq!!^@Eejsq-
-rename=!!GROUP=一元机场!!^@一元机场-
-rename=!!GROUP=两元店!!^@两元店-
-rename=!!GROUP=eton!!^@Eton-
-rename=!!GROUP=efcloud!!^@EfCloud-
-rename=!!GROUP=Eevpn!!^@Eevpn-
-rename=!!GROUP=fscloud!!^@Fscloud-
-rename=!!GROUP=cinx!!^@cinx-
-rename=!!GROUP=云安云!!^@yay-
+;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
 ;luck
