--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -6,7 +6,7 @@ ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Un
 ruleset=谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=微软Bing,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+ruleset=微软copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
 ruleset=微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
 ruleset=微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
 ruleset=电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
@@ -44,7 +44,7 @@ custom_proxy_group=巴哈姆特`select`[]台湾`[]节点选择`[]手动切换`[]
 custom_proxy_group=国外媒体`select`[]节点选择`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
 custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]手动切换
 custom_proxy_group=谷歌FCM`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=微软Bing`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=微软copilot`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
 custom_proxy_group=微软云盘`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
 custom_proxy_group=微软服务`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
 custom_proxy_group=游戏平台`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
