--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -1,64 +1,58 @@
 [custom]
 
-;设置规则标志位
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-ruleset=谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
+; 设置规则标志位
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Lan/Lan.yaml
+; ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=GoogleFCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleFCM/GoogleFCM.yaml
 ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=微软copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
-ruleset=微软云盘,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/OneDrive.list
-ruleset=微软服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-ruleset=电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
-ruleset=AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
-ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
-ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
-ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
-ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
-ruleset=游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
-ruleset=youtobe,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=奈飞视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
-ruleset=巴哈姆特,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
-ruleset=国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-;ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
-;ruleset=DIRECT,[]GEOIP,LAN
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/SteamCN/SteamCN.yaml
+; ruleset=微软copilot,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Bing.list
+; ruleset=OneDrive,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OneDrive/OneDrive.yaml
+ruleset=微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Microsoft/Microsoft.yaml
+ruleset=telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Telegram/Telegram.yaml
+ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
+ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
+ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/ClashClaude/Claude.list
+ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Game/Game.list
+ruleset=youtobe,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
+ruleset=netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
+ruleset=国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMedia/ChinaMedia.yaml
+ruleset=国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GlobalMedia/GlobalMedia.list
+ruleset=节点选择,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Proxy/Proxy.yaml
+; ruleset=DIRECT,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/China/China.list
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Cloud/CloudCN/CloudCN.yaml
+ruleset=DIRECT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Download/Download.list
 ruleset=DIRECT,[]GEOIP,CN
 ruleset=漏网之鱼,[]FINAL
-;设置规则标志位
+; 设置规则标志位
 
-;设置分组标志位
+; 设置分组标志位
 custom_proxy_group=节点选择`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
 custom_proxy_group=手动切换`select`.*
 custom_proxy_group=最低延迟`url-test`[]香港`[]新加坡`[]日本`http://www.gstatic.com/generate_204`300
-custom_proxy_group=电报消息`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
 custom_proxy_group=AI`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
+custom_proxy_group=telegram`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
 custom_proxy_group=youtobe`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=奈飞视频`select`[]netflix`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=巴哈姆特`select`[]台湾`[]节点选择`[]手动切换`[]DIRECT
+custom_proxy_group=netflix`select`[]netflix自选`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
 custom_proxy_group=国外媒体`select`[]节点选择`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
 custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]手动切换
-custom_proxy_group=谷歌FCM`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=微软copilot`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=微软云盘`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+; custom_proxy_group=微软copilot`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+; custom_proxy_group=OneDrive`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
+custom_proxy_group=GoogleFCM`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
 custom_proxy_group=微软服务`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
 custom_proxy_group=游戏平台`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
 custom_proxy_group=漏网之鱼`select`[]节点选择`[]最低延迟`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换
-custom_proxy_group=香港`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=日本`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=美国`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=台湾`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=新加坡`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=韩国`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=netflix`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
-;设置分组标志位
+custom_proxy_group=香港`url-test`(?i)(港|HK|Hong Kong|hongkong)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=日本`url-test`(?i)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=美国`url-test`(?i)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=台湾`url-test`(?i)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=新加坡`url-test`(?i)(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=韩国`url-test`(?i)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=netflix自选`select`(?i)(NF|奈飞|解锁|Netflix)
+; 设置分组标志位
 
 enable_rule_generator=true
 overwrite_original_rules=true
 
-;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
+; clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
