--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -12,8 +12,9 @@ ruleset=微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Telegram/Telegram.yaml
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
-ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/ClashClaude/Claude.list
+ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.list
 ruleset=游戏平台,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Game/Game.list
+ruleset=tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=youtobe,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
 ruleset=netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Netflix/Netflix.list
 ruleset=国内媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/ChinaMedia/ChinaMedia.yaml
@@ -28,21 +29,22 @@ ruleset=漏网之鱼,[]FINAL
 ; 设置规则标志位
 
 ; 设置分组标志位
-custom_proxy_group=节点选择`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=手动切换`select`.*
+; custom_proxy_group=节点选择`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
+; custom_proxy_group=手动切换`select`.*
 custom_proxy_group=最低延迟`url-test`[]香港`[]新加坡`[]日本`http://www.gstatic.com/generate_204`300
-custom_proxy_group=AI`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=telegram`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=youtobe`select`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=netflix`select`[]netflix自选`[]节点选择`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=国外媒体`select`[]节点选择`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换`[]DIRECT
-custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]手动切换
-; custom_proxy_group=微软copilot`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-; custom_proxy_group=OneDrive`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=GoogleFCM`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=微软服务`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=游戏平台`select`[]DIRECT`[]节点选择`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国`[]手动切换
-custom_proxy_group=漏网之鱼`select`[]节点选择`[]最低延迟`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]手动切换
+custom_proxy_group=AI`select`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=tiktok`select`[]最低延迟`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=telegram`select`[]最低延迟`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=youtobe`select`[]最低延迟`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=netflix`select`[]netflix自选`[]最低延迟`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=国外媒体`select`[]最低延迟`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=国内媒体`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本
+; custom_proxy_group=微软copilot`select`[]DIRECT`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国
+; custom_proxy_group=OneDrive`select`[]DIRECT`[]美国`[]香港`[]台湾`[]新加坡`[]日本`[]韩国
+custom_proxy_group=GoogleFCM`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
+custom_proxy_group=微软服务`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
+custom_proxy_group=游戏平台`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
+custom_proxy_group=漏网之鱼`select`[]最低延迟`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=香港`url-test`(?i)(?=.*1x)(港|HK|Hong Kong|hongkong)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=日本`url-test`(?i)(?=.*1x)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=美国`url-test`(?i)(?=.*1x)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300
