--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -45,12 +45,12 @@ custom_proxy_group=GoogleFCM`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日
 custom_proxy_group=微软服务`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=游戏平台`select`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
 custom_proxy_group=漏网之鱼`select`[]最低延迟`[]DIRECT`[]香港`[]台湾`[]新加坡`[]日本`[]美国`[]韩国
-custom_proxy_group=香港`url-test`(?i)(?=.*1x)(港|HK|Hong Kong|hongkong)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=日本`url-test`(?i)(?=.*1x)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=美国`url-test`(?i)(?=.*1x)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=台湾`url-test`(?i)(?=.*1x)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=新加坡`url-test`(?i)(?=.*1x)(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300
-custom_proxy_group=韩国`url-test`(?i)(?=.*1x)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=香港`url-test`(?i)(?=.*1x)(?!.*0\.1x)(港|HK|Hong Kong|hongkong)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=日本`url-test`(?i)(?=.*1x)(?!.*0\.1x)(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=美国`url-test`(?i)(?=.*1x)(?!.*0\.1x)(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=台湾`url-test`(?i)(?=.*1x)(?!.*0\.1x)(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=新加坡`url-test`(?i)(?=.*1x)(?!.*0\.1x)(新加坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300
+custom_proxy_group=韩国`url-test`(?i)(?=.*1x)(?!.*0\.1x)(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300
 custom_proxy_group=netflix自选`select`(?i)(NF|奈飞|解锁|Netflix)
 ; 设置分组标志位
 
