--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -25,7 +25,7 @@ ruleset=漏网之鱼,[]FINAL
 
 ; 设置分组标志位
 custom_proxy_group=默认选择`fallback`[]香港`[]新加坡`[]日本`http://www.gstatic.com/generate_204`60
-custom_proxy_group=AI`select`[]默认选择`[]新加坡`[]香港`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
+custom_proxy_group=AI`select`[]默认选择`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=tiktok`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=telegram`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
 custom_proxy_group=youtobe`select`[]默认选择`[]香港`[]新加坡`[]台湾`[]日本`[]美国`[]韩国`[]DIRECT
