--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -13,6 +13,10 @@ ruleset=telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.list
+; DOMAIN-SUFFIX,geller-pa.googleapis.com,AI
+; DOMAIN,alkalicore-pa.clients6.google.com,AI
+ruleset=AI,[]DOMAIN-SUFFIX,geller-pa.googleapis.com
+ruleset=AI,[]DOMAIN,alkalicore-pa.clients6.google.com
 ruleset=GoogleFCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=youtobe,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
