--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -17,6 +17,8 @@ ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/h
 ; DOMAIN,alkalicore-pa.clients6.google.com,AI
 ruleset=AI,[]DOMAIN-SUFFIX,geller-pa.googleapis.com
 ruleset=AI,[]DOMAIN,alkalicore-pa.clients6.google.com
+ruleset=AI,[]DOMAIN,robinfrontend-pa.googleapis.com
+ruleset=AI,[]DOMAIN,subscriptionsfirstparty-pa.googleapis.com
 ruleset=GoogleFCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=youtobe,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
