--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -15,10 +15,15 @@ ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/h
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.list
 ; DOMAIN-SUFFIX,geller-pa.googleapis.com,AI
 ; DOMAIN,alkalicore-pa.clients6.google.com,AI
-ruleset=AI,[]DOMAIN-SUFFIX,geller-pa.googleapis.com
+ruleset=AI,[]DOMAIN,geller-pa.googleapis.com
 ruleset=AI,[]DOMAIN,alkalicore-pa.clients6.google.com
 ruleset=AI,[]DOMAIN,robinfrontend-pa.googleapis.com
+ruleset=AI,[]DOMAIN,voilatile-pa.googleapis.com
 ruleset=AI,[]DOMAIN,subscriptionsfirstparty-pa.googleapis.com
+; ruleset=AI,[]DOMAIN,drive-thirdparty.googlecontent.com
+; ruleset=AI,[]DOMAIN,push.clients6.google.com
+; ruleset=AI,[]DOMAIN,lh3.googlecontent.com
+; ruleset=AI,[]DOMAIN,android.googleapis.com
 ruleset=GoogleFCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=tiktok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
 ruleset=youtobe,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/YouTube/YouTube.list
