--- a/share_remote_config.ini
+++ b/share_remote_config.ini
@@ -13,13 +13,11 @@ ruleset=telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.list
-; DOMAIN-SUFFIX,geller-pa.googleapis.com,AI
-; DOMAIN,alkalicore-pa.clients6.google.com,AI
-ruleset=AI,[]DOMAIN,geller-pa.googleapis.com
-ruleset=AI,[]DOMAIN,alkalicore-pa.clients6.google.com
-ruleset=AI,[]DOMAIN,robinfrontend-pa.googleapis.com
-ruleset=AI,[]DOMAIN,voilatile-pa.googleapis.com
 ruleset=AI,[]DOMAIN,subscriptionsfirstparty-pa.googleapis.com
+ruleset=AI,[]DOMAIN,robinfrontend-pa.googleapis.com
+; ruleset=AI,[]DOMAIN,geller-pa.googleapis.com
+; ruleset=AI,[]DOMAIN,alkalicore-pa.clients6.google.com
+; ruleset=AI,[]DOMAIN,voilatile-pa.googleapis.com
 ; ruleset=AI,[]DOMAIN,drive-thirdparty.googlecontent.com
 ; ruleset=AI,[]DOMAIN,push.clients6.google.com
 ; ruleset=AI,[]DOMAIN,lh3.googlecontent.com
