--- a/share_remote_config2.ini
+++ b/share_remote_config2.ini
@@ -13,8 +13,8 @@ ruleset=telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Gemini/Gemini.list
 ruleset=AI,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Claude/Claude.list
-ruleset=AI,[]DOMAIN,subscriptionsfirstparty-pa.googleapis.com
 ruleset=AI,[]DOMAIN,robinfrontend-pa.googleapis.com
+; ruleset=AI,[]DOMAIN,subscriptionsfirstparty-pa.googleapis.com
 ; ruleset=AI,[]DOMAIN,geller-pa.googleapis.com
 ; ruleset=AI,[]DOMAIN,alkalicore-pa.clients6.google.com
 ; ruleset=AI,[]DOMAIN,voilatile-pa.googleapis.com
