更新clash_rule_base.yaml文件的引用，修正为新的配置文件路径

--- a/clash_rule_base.yaml
+++ b/clash_rule_base.yaml
@@ -21,9 +21,6 @@ dns:
   - https://doh.pub/dns-query
   - https://dns.alidns.com/dns-query
   - https://dns.google/dns-query
-  proxy-server-nameserver:
-  - https://doh.pub/dns-query
-  - https://dns.alidns.com/dns-query
-  - tls://223.5.5.5
   direct-nameserver:
   - system
+  nameserver-policy:
